lockdown-iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

-A INPUT -p tcp --dport 21114 -j ACCEPT
-A OUTPUT -p tcp --sport 21114 -j ACCEPT
-A INPUT -p tcp --dport 21115 -j ACCEPT
-A OUTPUT -p tcp --sport 21115 -j ACCEPT
-A INPUT -p tcp --dport 21116 -j ACCEPT
-A OUTPUT -p tcp --sport 21116 -j ACCEPT
-A INPUT -p tcp --dport 21117 -j ACCEPT
-A OUTPUT -p tcp --sport 21117 -j ACCEPT
-A INPUT -p tcp --dport 21118 -j ACCEPT
-A OUTPUT -p tcp --sport 21118 -j ACCEPT
-A INPUT -p tcp --dport 21119 -j ACCEPT
-A OUTPUT -p tcp --sport 21119 -j ACCEPT
-A INPUT -p udp --dport 21116 -j ACCEPT
-A OUTPUT -p udp --sport 21116 -j ACCEPT

-A INPUT -p tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp --sport 22 -j ACCEPT
-A INPUT -p tcp --dport 3389 -j ACCEPT
-A OUTPUT -p tcp --sport 3389 -j ACCEPT
-A INPUT -p udp --dport 3389 -j ACCEPT
-A OUTPUT -p udp --sport 3389 -j ACCEPT
-A OUTPUT -p udp --dport 53 -j ACCEPT
# -A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A OUTPUT -j LOG --log-prefix "iptables-blocked-out: "
-A INPUT -j LOG --log-prefix "iptables-blocked-in: "

-A INPUT -j DROP
-A OUTPUT -j DROP

COMMIT
